--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 
 <body>
   <fbp-main>
-    <fbp-node id="rng">
+    <fbp-node class="drag-socket" id="rng">
       <!-- <fbp-random-number-generator></fbp-random-number-generator> -->
       <fbp-gear></fbp-gear>
     </fbp-node>
@@ -68,8 +68,8 @@
               // type: 'code',
               ui: {
                 position: {
-                  top: 10,
-                  left: 70
+                  top: 45,
+                  left: 45
                 }
               },
               sockets: [
