fix: refactor dnd + phase out main node WIP

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 
 <body>
   <fbp-main>
-    <fbp-node class="drag-socket" id="rng">
+    <fbp-node typex="root" class="drag-socket" id="rng">
       <!-- <fbp-random-number-generator></fbp-random-number-generator> -->
       <fbp-gear></fbp-gear>
     </fbp-node>
